--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.9.7",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "react": "^18.2.0",
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "styled-components": "^5.3.5",
+    "swiper": "^8.3.2",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
@@ -45,10 +46,14 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.17.1",
     "@types/jest": "^28.1.8",
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "babel-jest": "^29.0.3",
+    "jest": "^29.0.3",
+    "jest-dom": "^4.0.0"
   }
 }
